feat: enum ProductCategorie created + public endpoint to get categories created
