# api/models/product.go
@@ -6,7 +6,7 @@ type Product struct {
 	ID            uint   `gorm:"primaryKey"`
 	Name          string `gorm:"not null;uniqueIndex:idx_shop_product_name"`
 	Description   string
-	Category      string
+	Category      ProductCategory
 	PurchasePrice float64 `gorm:"not null"`
 	SellingPrice  float64 `gorm:"not null"`
 	Stock         int     `gorm:"not null"`
@@ -15,4 +15,31 @@ type Product struct {
 	CreatedAt     time.Time
 
 	Shop Shop `gorm:"foreignKey:ShopID;constraint:OnDelete:CASCADE"`
+}
+
+type ProductCategory string
+
+const (
+	Phone      ProductCategory = "Phone"
+	Television ProductCategory = "Television"
+	Charger    ProductCategory = "Charger"
+	Computer   ProductCategory = "Computer"
+	Peripheral ProductCategory = "Peripheral"
+)
+
+var AllProductCategories = []ProductCategory{
+	Phone,
+	Television,
+	Charger,
+	Computer,
+	Peripheral,
+}
+
+func IsValidCategory(cat ProductCategory) bool {
+	for _, c := range AllProductCategories {
+		if c == cat {
+			return true
+		}
+	}
+	return false
 }
